<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_tasks"
        android:icon="@drawable/ic_list"
        android:title="@string/list_title" />
    <item
        android:id="@+id/action_statistics"
        android:icon="@drawable/ic_statistics"
        android:title="@string/statistics_title" />
</menu>